--- a/Docker/apache.conf
+++ b/Docker/apache.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
   ServerAdmin me@mydomain.com
-  DocumentRoot /var/www/
+  DocumentRoot /var/www/public/
 
-  <Directory /var/www/>
+  <Directory /var/www/public/>
       Options Indexes FollowSymLinks MultiViews
       AllowOverride All
       Order deny,allow
