--- a/www/routes.yml
+++ b/www/routes.yml
@@ -43,7 +43,10 @@
     /first-user:
       controller: "user"
       action: "getFirstUser"
-    
+      /error:
+        controller: "error"
+        action: "displayError"
+          
 
 
 
