--- a/public/scss/webpack/package.json
+++ b/public/scss/webpack/package.json
@@ -17,5 +17,8 @@
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.10"
+  },
+  "dependencies": {
+    "node-sass": "^4.14.1"
   }
 }
