Ajout de l'objet Mail.

--- a/.env
+++ b/.env
@@ -1,6 +1,13 @@
+ENV=local
+
 DB_PREFIXE=dve_
 DB_USER=root
 DB_PWD=password
 DB_HOST=database
 DB_DRIVER=mysql
 DB_NAME=mvcdocker2
+
+SMTP_HOST=mailhog
+SMTP_PORT=1025
+SMTP_USER=
+SMTP_PASS=
