--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Copy repository contents via scp
-      uses: taoberquer/DivinEat@develop
+      uses: appleboy/scp-action@master
       env:
         HOST: ${{ secrets.HOST }}
         USERNAME: ${{ secrets.USERNAME }}
@@ -20,7 +20,7 @@ jobs:
         target: "/kunden/homepages/45/d795031835/htdocs/MySites/DivinEat"
 
     - name: Executing remote command
-      uses: taoberquer/DivinEat@develop
+      uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.HOST }}
         USERNAME: ${{ secrets.USERNAME }}
