--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ node_modules
 .env
 /www/public/scss/dist/main.css
 public/sitemap.xml
+public/img/uploadedImages/*
+!public/img/uploadedImages
+!/public/img/uploadedImages/banner.jpg
+!/public/img/uploadedImages/logo.png
