--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,12 @@
-ENV=local
-
-DB_PREFIXE=dve_
-DB_USER=root
+DB_NAME=mvcdocker2
 DB_PWD=password
 DB_HOST=database
+DB_USER=root
+DB_PREFIXE=dve_
 DB_DRIVER=mysql
-DB_NAME=mvcdocker2
-
+ENV=local
 SMTP_HOST=mailhog
 SMTP_PORT=1025
 SMTP_USER=
 SMTP_PASS=
+INSTALLATION_SUCCESS=1
