Ajout du favicon dynamique

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ public/img/uploadedImages/*
 !public/img/uploadedImages
 !/public/img/uploadedImages/banner.jpg
 !/public/img/uploadedImages/logo.png
+!/public/img/uploadedImages/favicon.ico
